<resources>
    <string name="app_name">#Tic-Tac-Toe</string>
    <string name="GameName">Tic-Tac-Toe</string>
    <string name="Start">Start!!</string>
    <string name="PVP">Player vs. Player</string>
    <string name="PVC">Player vs. Computer</string>
    <string name="CVC">Computer vs. Computer</string>
    <string name="DEasy">Difficulty: Easy</string>
    <string name="DMedium">Difficulty: Medium</string>
    <string name="DHard">Difficulty: Hard</string>
    <string name="Credit">Credits</string>
    <string name="X">Winner X</string>
    <string name="O">Winner O</string>
    <string name="Draw">DRAW</string>
</resources>
